Troubleshooting stylesheet difference on iphone screen. Remove 'fixed' from footer

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,6 @@
   }
 
   .results{
-    position: fixed;
     width: 100%;
     bottom: 0px;
   }
